[gd_scene load_steps=5 format=3 uid="uid://dgkovx8r25l6l"]

[ext_resource type="Script" uid="uid://cl1i1d43cj4tw" path="res://scripts/character.gd" id="1_677pu"]
[ext_resource type="Texture2D" uid="uid://4qa40su4b11m" path="res://AssetBundle/BG.png" id="2_v7dgu"]
[ext_resource type="Script" path="res://Scenes/level.gd" id="3_v7dgu"]
[ext_resource type="Texture2D" uid="uid://bnftf2wfue33y" path="res://AssetBundle/Ability_Box.svg" id="4_vdqda"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_677pu")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-8.65459e-05, -0.500051)
scale = Vector2(0.911764, 0.912761)
texture = ExtResource("2_v7dgu")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.93, 0.93)
metadata/_edit_lock_ = true

[node name="Go_Back" type="Button" parent="."]
offset_left = -606.0
offset_top = 287.0
offset_right = -535.0
offset_bottom = 318.0
text = "Go Back"

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = -452.0
offset_top = -274.0
offset_right = -313.0
offset_bottom = -243.0
text = "Name:"
metadata/_edit_lock_ = true

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = -453.0
offset_top = -217.0
offset_right = -313.0
offset_bottom = -186.0
item_count = 12
popup/item_0/text = "Barbarian"
popup/item_0/id = 0
popup/item_1/text = "Bard"
popup/item_1/id = 1
popup/item_2/text = "Cleric"
popup/item_2/id = 2
popup/item_3/text = "Druid"
popup/item_3/id = 3
popup/item_4/text = "Fighter"
popup/item_4/id = 4
popup/item_5/text = "Monk"
popup/item_5/id = 5
popup/item_6/text = "Paladin"
popup/item_6/id = 6
popup/item_7/text = "Ranger"
popup/item_7/id = 7
popup/item_8/text = "Rogue"
popup/item_8/id = 8
popup/item_9/text = "Sorcerer"
popup/item_9/id = 9
popup/item_10/text = "Warlock"
popup/item_10/id = 10
popup/item_11/text = "Wizard"
popup/item_11/id = 11
metadata/_edit_lock_ = true

[node name="Level" type="Label" parent="."]
offset_left = -452.0
offset_top = -166.0
offset_right = -412.0
offset_bottom = -143.0
text = "Lv : "
script = ExtResource("3_v7dgu")
metadata/_edit_lock_ = true

[node name="Experience" type="Label" parent="."]
offset_left = -344.0
offset_top = -166.0
offset_right = -303.0
offset_bottom = -143.0
text = "Exp : "
metadata/_edit_lock_ = true

[node name="HP" type="Label" parent="."]
offset_left = -454.0
offset_top = -120.0
offset_right = -414.0
offset_bottom = -97.0
text = "HP : "
metadata/_edit_lock_ = true

[node name="Box" type="Sprite2D" parent="."]
position = Vector2(5, 95.108)
rotation = 1.5708
scale = Vector2(0.366041, 0.634172)
texture = ExtResource("4_vdqda")
metadata/_edit_lock_ = true

[node name="Ability" type="Label" parent="."]
offset_left = -244.0
offset_top = -50.0
offset_right = -183.0
offset_bottom = -22.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Ability"
metadata/_edit_lock_ = true

[node name="Items" type="Label" parent="."]
offset_left = 180.0
offset_top = -51.0
offset_right = 235.0
offset_bottom = -23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Items"
metadata/_edit_lock_ = true

[node name="AbilityContainer" type="GridContainer" parent="."]
offset_left = -389.0
offset_top = -8.0
offset_right = -349.0
offset_bottom = 32.0
metadata/_edit_lock_ = true

[node name="AmountContainer" type="GridContainer" parent="."]
offset_left = -326.0
offset_top = -8.0
offset_right = -286.0
offset_bottom = 32.0
metadata/_edit_lock_ = true

[connection signal="pressed" from="Go_Back" to="." method="_on_go_back_pressed"]
